# overkill-factory

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  README.pt-BR.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PROJECT_SURFACE.md  README.md  pull_request_template.md
adapters/: README.md
agents/: README.md  capability-packs.public.json  hermes-profile-bindings.public.json  worker-contract.schema.json  worker-permission-classes.public.json  worker-profile-readiness.public.json  worker-profiles.public.json  worker-registry.public.json  worker-roster.md
docs/: README.md  factory-workflow.catalog.json  index.md  public-surface.manifest.json
examples/: README.md
planning-bundles/: README.md  manifest.json
products/: README.md
schemas/: README.md  access-capability.schema.json  agent-eval-plan.schema.json  agent-eval-result.schema.json  agent-runtime-hardening-profile.schema.json  ai-codebase-governance-report.schema.json  approval-request.schema.json  auditor-result.schema.json  autonomy-readiness-packet.schema.json  budget-contract.schema.json  canonical-checkpoint-manifest.schema.json  canonical-enforcement-audit-result.schema.json  canonical-enforcement-matrix.schema.json  canonical-linear-traceability.schema.json  canonical-real-infra-audit.schema.json  canonical-runtime-rulebook.schema.json  canonical-stage-implementation-coverage.schema.json  capability-pack-contract.schema.json  capability-pack-registry.schema.json  completion-audit.schema.json  control-tower-approval-registration-smoke.schema.json  control-tower-event.schema.json  control-tower-readonly-smoke.schema.json  data-metrics-plan.schema.json  dependency-map.schema.json  devnet-read-proof.schema.json  discord-approval-interaction-result.schema.json  discord-control-tower-mapping.schema.json  discord-control-tower-owner-setup.schema.json  discord-control-tower-ux-audit.schema.json  evidence-graph.schema.json  execution-learnback-record.schema.json  factory-battery-result.schema.json  factory-card.schema.json  factory-completion-audit.schema.json  factory-help.schema.json  factory-improvement-issue-candidate.schema.json  factory-improvement-radar.schema.json  factory-learning-proposal.schema.json  factory-maturity-scorecard.schema.json  (+94 more)
scripts/: README.md  __init__.py  canonical_enforcement_audit.py  canonical_linear_traceability_audit.py  canonical_real_infra_audit.py  canonical_runtime_enforcement.py  control_tower_approval_registration_smoke.py  control_tower_readonly_smoke.py  crabbox_local_container_remote_proof.py  evidence_reconciler.py  factory_battery.py  factory_completion_audit.py  factory_concierge_discord_automation.py  factory_concierge_discord_bridge.py  factory_production_readiness.py  factory_self_improvement.py  factoryctl.py  full_product_worker_graph.py  managed_remote_proof_probe.py  materialize_hermes_profiles.py  operator_control_tower_owner_setup_doctor.py  operator_control_tower_private_evidence_doctor.py  operator_control_tower_private_evidence_init.py  operator_control_tower_proof.py  product_face_proof.py  production_full_product_worker_graph.py  production_release_gate.py  public_safety_scan.py  quasar_product_like_container_proof.py  quickstart_smoke.py  qvg_product_like_auditor_result.py  qvg_quasar_cu_fuzz_property_proof.py  qvg_quasar_cu_svm_economic_proof.py  release_integration_preflight.py  remote_proof_smoke.py  safe_shell.py  secret_safety_scan.py  supply_chain_proof.py  validate_document_governance.py  validate_planning_bundles.py  (+5 more)
skills/: README.md
templates/: README.md  access-capability.json  agent-eval-plan.json  agent-eval-result.json  agent-runtime-hardening-profile.json  approval-request.json  architecture-review-packet.md  autonomy-readiness-packet.json  budget-contract.json  capability-pack-activation-example.json  capability-pack-contract.json  completion-audit.json  control-tower-event.json  data-metrics-plan.json  dependency-map.json  discord-approval-interaction-result.json  discord-control-tower-mapping.json  discord-control-tower-owner-setup.json  discord-control-tower-ux-audit.json  execution-learnback-record.json  factory-card.json  factory-improvement-radar.json  factory-learning-proposal.json  factory-maturity-scorecard.json  factory-status-snapshot.json  full-product-sot-scope-coverage.json  hermes-production-proof.json  human-gate-record.json  incident-support-plan.json  legacy-migration-plan.json  loop-plan.json  method-contract.json  operator-control-tower-bridge-health.json  outcome-contract.json  owner-issue-intake-config.json  parallel-lane-contract.json  pilot-input-paper.md  platform-devex-plan.json  privacy-compliance-plan.json  product-context-packet.json  (+26 more)
tests/: README.md  test_agent_directory_docs.py  test_agent_reference_study_execution.py  test_canonical_enforcement_audit.py  (+61 more)
(+1057 files in other folders)
