[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "overkill-factory"
version = "0.1.0"
description = "Gated production line for Hermes-powered agentic product work."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Overkill Factory contributors" }]
keywords = ["agents", "hermes", "governance", "kanban", "product-engineering"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/felipegermano17/overkill-factory"
Documentation = "https://github.com/felipegermano17/overkill-factory/tree/main/docs"
Repository = "https://github.com/felipegermano17/overkill-factory"
Issues = "https://github.com/felipegermano17/overkill-factory/issues"

[project.scripts]
factoryctl = "scripts.factoryctl:main"
overkill-quickstart = "scripts.quickstart_smoke:main"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
include = ["scripts*"]
