[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "overkill-factory"
version = "0.1.0"
description = "Gated production line for Hermes-powered agentic product work."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Overkill Factory contributors" }]
keywords = ["agents", "hermes", "governance", "kanban", "product-engineering"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/felipegermano17/overkill-factory"
Documentation = "https://github.com/felipegermano17/overkill-factory/tree/main/docs"
Repository = "https://github.com/felipegermano17/overkill-factory"
Issues = "https://github.com/felipegermano17/overkill-factory/issues"

[project.scripts]
factoryctl = "scripts.factoryctl:main"
overkill-quickstart = "scripts.quickstart_smoke:main"

[tool.setuptools]
py-modules = []
include-package-data = true

[tool.setuptools.packages.find]
include = ["scripts*"]

[tool.setuptools.data-files]
"share/overkill-factory" = ["README.md", "LICENSE", "pyproject.toml"]
"share/overkill-factory/adapters" = ["adapters/README.md"]
"share/overkill-factory/adapters/hermes" = ["adapters/hermes/*.md", "adapters/hermes/*.py"]
"share/overkill-factory/adapters/hermes/patches" = ["adapters/hermes/patches/*.patch"]
"share/overkill-factory/agents" = ["agents/*.json", "agents/*.md"]
"share/overkill-factory/docs" = ["docs/index.md", "docs/README.md"]
"share/overkill-factory/docs/getting-started" = ["docs/getting-started/*.md"]
"share/overkill-factory/docs/reference" = ["docs/reference/*.md"]
"share/overkill-factory/examples" = ["examples/README.md"]
"share/overkill-factory/examples/minimal-hermes-project" = ["examples/minimal-hermes-project/*"]
"share/overkill-factory/schemas" = ["schemas/*.json"]
"share/overkill-factory/skills" = ["skills/README.md"]
"share/overkill-factory/skills/codex/overkill-factory" = ["skills/codex/overkill-factory/SKILL.md"]
"share/overkill-factory/skills/codex/overkill-factory/references" = ["skills/codex/overkill-factory/references/*.md"]
"share/overkill-factory/templates" = ["templates/*.json", "templates/*.md"]
